# dreamer

./: .gitmodules  CMakeLists.txt  Cargo.toml  LICENSE  main.qmodel  notes.md
assets/: aaaaaaaaa.comp  concept.afdesign  shapes.afdesign  what hav i dun.comp
rust-sciter/serde/: Cargo.toml
rust-sciter/src/: host.rs
src/: CMakeLists.txt  Dreamer.pro  handler.rs  main.cpp  main.qml  main.rs  model.rs  qml.qrc
src/channel/: mod.rs
src/data/: image.rs  mod.rs  viewer.rs
src/graph/: mod.rs
src/image/: import.rs  mod.rs
ui/: animations.tis  main.html  main.tis  util.tis
ui/style/: dark.css  main.css  toolbar.css
